--- a/Backend/views/index.jade
+++ b/Backend/views/index.jade
@@ -1,5 +1,31 @@
 extends layout
-
+style
 block content
-  h1= title
-  p Welcome to #{title}
+    h1= title
+    p Welcome to #{title}
+
+        table(class='table table-hover table-bordered')
+            thead
+                td Code permanent
+                td Nom
+                td Prenom
+                td Date de naissance
+                td Sexe
+            each dossier in data
+                tr
+
+                    td(style='width:10px')
+                       a(href='/dossiers/'+dossier.codePermanent) #{dossier.codePermanent}
+                    td(style='width:15px') #{dossier.nom}
+                    td(style='width:15px') #{dossier.prenom}
+                    td(style='width:15px') #{dossier.dateNaissance}
+                    if dossier.sexe==1
+                        td(style='width:15px') Homme
+                    else if dossier.sexe==2
+                             td(style='width:15px') Femme
+                    else
+                        td s/o
+            tfoot
+                td(colspan=5) Nombre de dossiers : #{data.length}
+
+
