--- a/Backend/views/layout.jade
+++ b/Backend/views/layout.jade
@@ -2,6 +2,75 @@ doctype html
 html
   head
     title= title
+    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+    script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js')
+    script(src='/javascripts/functions.js')
+    script(type='text/javascript')
+        $(document).ready(hideTable());
+
+
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css')
+    link(rel='stylesheet',href='//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css')
+
   body
-    block content
+      nav.navbar.navbar-default(role='navigation')
+      .container-fluid
+          //
+             Brand and toggle get grouped for better mobile display
+          .navbar-header
+
+              button.navbar-toggle(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
+                  span.sr-only Toggle navigation
+                  span.icon-bar
+                  span.icon-bar
+                  span.icon-bar
+              a.navbar-brand(href='/') Accueil
+          //
+             Collect the nav links, forms, and other content for toggling
+          #bs-example-navbar-collapse-1.collapse.navbar-collapse
+              ul.nav.navbar-nav
+
+                  li.dropdown
+                      a.dropdown-toggle(href='#', data-toggle='dropdown')
+                          | Gestion des dossiers
+                          span.caret
+                      ul.dropdown-menu(role='menu')
+                          li
+                              a(href='#') Voir la liste
+                          li
+                              a(href='#') En ajouter un
+
+
+                          li
+                              a(href='#') Something else here
+                          li.divider
+                          li
+                              a(href='#') Separated link
+                          li.divider
+                          li
+                              a(href='#') One more separated link
+
+              ul.nav.navbar-nav.navbar-right
+                  li
+                      a(href='#') Link
+                  li.dropdown
+                      a.dropdown-toggle(href='#', data-toggle='dropdown')
+                          | Dropdown
+                          span.caret
+                      ul.dropdown-menu(role='menu')
+                          li
+                              a(href='#') Action
+                          li
+                              a(href='#') Another action
+                          li
+                              a(href='#') Something else here
+                          li.divider
+                          li
+                              a(href='#') Separated link
+          //
+             /.navbar-collapse
+          //
+             /.container-fluid
+
+      block content
