--- a/Backend/views/fiche.jade
+++ b/Backend/views/fiche.jade
@@ -1,89 +1,117 @@
 extends layout
 style
+
 block content
     ol.breadcrumb
         li
             a(href='/') Dossiers
         li.active #{dossier.codePermanent}
     #Infos
-    #titre-fiche Dossier
-    #Contenu
-        ul#details-etudiant
-            li#code Code Permanent : #{dossier.codePermanent}
-            li#nom Nom de l'étudiant(e) : #{dossier.nom}
-            li#prenom Prenom de l'étudiant(e) : #{dossier.prenom}
-            li#date Date de naissance de l'étudiant(e) : #{dossier.dateNaissance}
+        #titre-fiche Dossier
+        #contenu
+            #result.alert
+            ul#details-etudiant
+                li#code Code Permanent :
+                    span#code-valeur #{dossier.codePermanent}
+                li#nom Nom de l'étudiant(e) :
+                    span#nom-valeur #{dossier.nom}
+                li#prenom Prenom de l'étudiant(e) :
+                    span#prenom-valeur  #{dossier.prenom}
+                li#date Date de naissance de l'étudiant(e) :
+                   span#date-valeur=moment(dossier.dateNaissance).format('Do MMMM YYYY')
+                  - var sexeTexte="s/o";
+                if dossier.sexe==1
+                    - sexeTexte=" Homme";
+                else if dossier.sexe==2
 
-            if dossier.sexe==1
-                li#sexe Sexe l'étudiant(e) : Homme
-            else if dossier.sexe==2
-                    li#sexe Sexe l'étudiant(e) : Femme
-            else
-                li#sexe Sexe l'étudiant(e) : s/o
+                        - sexeTexte="Femme"
+                li#sexe Sexe l'étudiant(e):
+                    span#sexe-valeur #{sexeTexte}
 
-    table.table.table-hover.table-bordered.cours-margins-def
-        thead
-            tr
-                td(colspan='4') Liste des cours
-            tr
-                td Sigle
-                td Groupe
-                td Session
-                td Note finale
-        each cours in dossier.listeCours
-               if cours.noteFinale >= 60
-                   tr.success
-                       td #{cours.sigle}
-                       td #{cours.groupe}
-                       td #{cours.session}
-                       td #{cours.noteFinale}
-               else
-                   tr.danger
-                       td #{cours.sigle}
-                       td #{cours.groupe}
-                       td #{cours.session}
-                       td #{cours.noteFinale}
-        tfoot
-            tr
-                td(colspan='4') Nombre de cours:
-            tr
-                td Légende
-                td.success Cours réussi
-                td.danger Cours échoué
-                td(colspan='2')
-    button(href='#myModal' class='btn btn-info' data-toggle="modal" data-target="#edition-fiche")  mettre à jour la fiche
-    a(class='btn btn-default' href='/') Retour à la liste des étudiants
-
-    // Modal HTML
-    #edition-fiche.modal.fade
-        .modal-dialog
-            .modal-content
-                .modal-header
-                    button.close(type='button', data-dismiss='modal', aria-hidden='true') ×
-                    h4.modal-title Édition
-                .modal-body
-                    form.form-horizontal(action='/dossiers/:cp', method='put')
-                        fieldset
-                            // Form Name
-                            legend Dossier
-                            label(for='cp') Code permanent
-                            input#cp(type='text', value='aaaa', disabled='')
-                            br
-                            label(for='nom') Nom
-                            input#nom(type='text', value='aaaa')
-                            br
-                            label(for='prenom') Prenom
-                            input#prenom(type='text', value='aaaa')
-                            br
-                            label(for='sexe') Sexe
-                            select#sexe
-                                option(value='1', selected='') Homme
-                                option(value='2') Femme
-                                option(value='3') S/O
+        table#cours.table.table-hover.table-bordered.cours-margins-def
+            thead
+                tr
+                    td(colspan='4') Liste des cours
+                tr
+                    td Sigle
+                    td Groupe
+                    td Session
+                    td Note finale
+            each  cours in dossier.listeCours
+                   if cours.noteFinale >= 60
+                       tr.uncours.success
+                           td #{cours.sigle}
+                           td #{cours.groupe}
+                           td #{cours.session}
+                           td #{cours.noteFinale}
+                   else
+                       tr.uncours.danger
+                           td #{cours.sigle}
+                           td #{cours.groupe}
+                           td #{cours.session}
+                           td #{cours.noteFinale}
+            tfoot
+                tr
+                    td(colspan='4') Nombre de cours: #{dossier.listeCours.length}
+                tr
+                    td Légende
+                    td.success Cours réussi
+                    td.danger Cours échoué
+                    td(colspan='2')
+        button(href='#myModal' class='btn btn-info' data-toggle="modal" data-target="#edition-fiche")  mettre à jour le dossier
+        button#delete.btn.btn-danger(type="button") Supprimer l'étudiant(e)
+        button#retour.btn.btn-default(type="button", href='/')  Retour à la liste des étudiants
 
 
-                p.text-warning
-                        small If you don't save, your changes will be lost.
-                .modal-footer
-                    button.btn.btn-default(type='button', data-dismiss='modal') Close
-                    button.btn.btn-primary(type='button') Save changes
+        // Modal HTML
+        #edition-fiche.modal.fade
+            .modal-dialog
+                .modal-content
+                    .modal-header
+                        button.close.close-edit(type='button', data-dismiss='modal', aria-hidden='true') ×
+                        h4.modal-title Mise à jour
+                    .modal-body
+                        #result.alert.alert-info Les changements sont sauvegardés automatiquement.
+                        form#editionDossier.form-horizontal
+                            fieldset
+                                // Form Name
+                                legend Dossier
+                                label(for='cp') Code permanent
+                                input.edit#form-cp(type='text', value='#{dossier.codePermanent}')
+                                br
+                                label(for='nom') Nom
+                                input.edit#form-nom(type='text', value='#{dossier.nom}')
+                                br
+                                label(for='prenom') Prenom
+                                input.edit#form-prenom(type='text', value='#{dossier.prenom}')
+                                br
+                                label(for='sexe') Sexe
+                                   if dossier.sexe==1
+                                       select.edit#form-sexe
+                                        option#1(value='1', selected="true") Homme
+                                        option#2(value='2',) Femme
+                                        option#3(value='3') S/O
+
+                                    else if dossier.sexe==2
+                                            select.edit#form-sexe
+                                                option#1(value='1' ) Homme
+                                                option#2(value='2',selected="true") Femme
+                                                option#3(value='3') S/O
+                                    else
+
+                                        select.edit#form-sexe
+                                            option#1(value='1') Homme
+                                            option#2(value='2',) Femme
+                                            option#3(value='3',selected="true") S/O
+                                br
+                                label(for="dateNaissance") Date de naissance
+                                input.edit#form-dateNaissance(type='text',value='#{dossier.dateNaissance}')
+
+
+
+
+
+                    .modal-footer
+                        button.close-edit.btn.btn-default(type='button', data-dismiss='modal') Fermer
+
+
